--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@clack/prompts": "^0.7.0",
     "@types/cli-progress": "^3.11.6",
     "cli-progress": "^3.12.0",
+    "handlebars": "^4.7.8",
     "picocolors": "^1.1.0"
   }
 }
