chore: publish script & readme

--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "type": "module",
   "scripts": {
     "build": "bun build --target=bun ./index.ts --outdir ./dist",
+    "postbuild": "bun run postbuild.ts",
     "build:standalone": "bun build --compile --minify ./index.ts --outfile ./create-adobe-plugin",
-    "prepublishOnly": "bun run build",
-    "publish": "npm publish --access public",
+    "prepublishOnly": "bun run build && npm version patch",
     "start": "bun run index.ts"
   },
   "files": [
