--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@exaecut/create-adobe-plugin",
   "version": "0.1.3",
-  "description": "A command-line tool to create a new Adobe plugin.",
+  "description": "A command-line tool to create a new Adobe plugin using C++.",
   "author": {
     "name": "exaecut",
     "url": "https://github.com/exeacut",
