--- a/package.json
+++ b/package.json
@@ -19,11 +19,10 @@
     "postbuild": "bun run postbuild.ts",
     "build:standalone": "bun build --compile --minify ./index.ts --outfile ./create-adobe-plugin",
     "prepublishOnly": "bun run build && npm version patch",
-    "start": "bun run index.ts"
+    "start": "bun run build && bun run ./dist/index.js"
   },
   "files": [
-    "dist",
-    "template"
+    "dist"
   ],
   "bin": {
     "create-adobe-plugin": "dist/index.js"
